[package]
name = "ink_lang"
version = "3.0.0-rc3"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://docs.rs/ink_lang/"
homepage = "https://www.parity.io/"
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_env = { version = "3.0.0-rc3", path = "../env", default-features = false }
ink_storage = { version = "3.0.0-rc3", path = "../storage", default-features = false }
ink_primitives = { version = "3.0.0-rc3", path = "../primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc3", path = "../metadata", default-features = false, optional = true }
ink_prelude = { version = "3.0.0-rc3", path = "../prelude", default-features = false }
ink_lang_macro = { version = "3.0.0-rc3", path = "macro", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
derive_more = { version = "0.99", default-features = false, features = ["from"] }
static_assertions = "1.1"

[dev-dependencies]
# required for the doctest of `env_access::EnvAccess::instantiate_contract`
scale-info = { version = "0.6", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "ink_metadata",
    "ink_metadata/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang_macro/std",
    "scale/std",
]
