[package]
name = "ink_lang"
version = "3.0.0-rc6"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://docs.rs/ink_lang/"
homepage = "https://www.parity.io/"
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_env = { version = "3.0.0-rc6", path = "../env", default-features = false }
ink_storage = { version = "3.0.0-rc6", path = "../storage", default-features = false }
ink_primitives = { version = "3.0.0-rc6", path = "../primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc6", path = "../metadata", default-features = false, optional = true }
ink_prelude = { version = "3.0.0-rc6", path = "../prelude", default-features = false }
ink_eth_compatibility = { version = "3.0.0-rc6", path = "../eth_compatibility", default-features = false }
ink_lang_macro = { version = "3.0.0-rc6", path = "macro", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full"] }
derive_more = { version = "0.99", default-features = false, features = ["from"] }

[dev-dependencies]
ink_lang_ir = { version = "3.0.0-rc6", path = "ir" }
ink_metadata = { version = "3.0.0-rc6", default-features = false, path = "../metadata" }

trybuild = { version = "1.0.52", features = ["diff"] }
# Required for the doctest of `env_access::EnvAccess::instantiate_contract`
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "ink_metadata",
    "ink_metadata/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang_macro/std",
    "scale/std",
]
show-codegen-docs = []

# Due to https://github.com/rust-lang/cargo/issues/6915 features that affect a dev-dependency
# currently can't be enabled by a parent crate, hence `["ink_env/ink-experimental-engine"]` does
# not work.
# After we switch to the new off-chain environment with https://github.com/paritytech/ink/issues/565
# we can remove the feature altogether.
ink-experimental-engine = []
