[package]
name = "ink_metadata"
documentation = "https://docs.rs/ink_metadata/"

version.workspace = true
authors.workspace = true
edition.workspace = true

license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
ink_prelude = { version = "4.0.0-alpha.3", path = "../prelude/", default-features = false }
ink_primitives = { version = "4.0.0-alpha.3", path = "../primitives/", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
impl-serde = "0.4.0"
derive_more = { version = "0.99", default-features = false, features = ["from"] }
scale-info = { version = "2", default-features = false, features = ["derive", "serde", "decode"] }

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"

[features]
default = [
    "std",
    "derive",
]
std = [
    "ink_prelude/std",
    "serde/std",
    "scale-info/std",
]
derive = []
