[package]
name = "ink_metadata"
version.workspace = true
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition.workspace = true

license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ink_metadata/"
homepage.workspace = true
description = "[ink!] Metadata definitions for ink! smart contracts."
keywords.workspace = true
categories.workspace = true
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_prelude = { version = "=4.2.0", path = "../prelude/", default-features = false }
ink_primitives = { version = "=4.2.0", path = "../primitives/", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
impl-serde = "0.4.0"
derive_more = { version = "0.99", default-features = false, features = ["from"] }
scale-info = { version = "2.6", default-features = false, features = ["derive", "serde", "decode", "schema"] }
schemars = "0.8"

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"

[features]
default = [
    "std",
    "derive",
]
std = [
    "ink_prelude/std",
    "ink_primitives/std",
    "serde/std",
    "scale-info/std",
]
derive = []
