[package]
name = "ink_precompiles"
version.workspace = true
authors = ["Use Ink <ink@use.ink>"]
edition.workspace = true
license.workspace = true
description = "[ink!] Precompile interfaces for Polkadot SDK `pallet-revive` smart contracts."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ink_primitives = { workspace = true, default-features = false }
ink_env = { workspace = true, default-features = false }
# Note: The contract_ref macro is applied in the ink crate to avoid circular dependencies
# This crate only defines the plain trait

[dev-dependencies]
# Only used in tests
ink = { workspace = true }

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_env/std",
]

