[package]
name = "ink_precompiles"
version.workspace = true
authors = ["Use Ink <ink@use.ink>"]
edition.workspace = true
license.workspace = true
description = "[ink!] Precompile interfaces for Polkadot SDK `pallet-revive` smart contracts."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ink_primitives = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "ink_primitives/std",
]

