[package]
name = "ink_prelude"
version = "3.0.0-rc3"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://docs.rs/ink_prelude/"
homepage = "https://www.parity.io/"
description = "[ink!] Common API for no_std and std to access alloc crate types."
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
cfg-if = "1.0"

[features]
default = ["std"]
std = []
