[package]
name = "ink_prelude"
documentation = "https://docs.rs/ink_prelude/"

version.workspace = true
authors.workspace = true
edition.workspace = true

license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
cfg-if = "1.0"

[features]
default = ["std"]
std = []
